Build debug APK with verbose Gradle stacktrace

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -28,8 +28,9 @@ jobs:
       - name: Flutter pub get
         run: flutter pub get
 
-      - name: Build debug APK
-        run: flutter build apk --debug
+      - name: Build debug APK (with stacktrace)
+  run: |
+    flutter build apk --debug --verbose
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
