--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,13 +10,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up Java
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
+          distribution: temurin
           java-version: '17'
 
       - name: Set up Flutter
@@ -25,14 +25,13 @@ jobs:
           flutter-version: '3.22.3'
           cache: true
 
-      - name: Flutter pub get
+      - name: Install dependencies
         run: flutter pub get
 
-      - name: Build debug APK (with stacktrace)
-  run: |
-    flutter build apk --debug --verbose
+      - name: Build debug APK with verbose output
+        run: flutter build apk --debug --verbose
 
-      - name: Upload APK
+      - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: AXIS-APK
